# Renewly

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt
application/: cleanup_service.py  feedback_service.py  ingestion_service.py  query_service.py
docs/: architecture.md
domain/: exceptions.py  models.py
frontend/: index.html  script.js  style.css
interface/: api.py  cli.py
memory/: cloud_adapter.py  factory.py  local_adapter.py  port.py
scheduler/: digest_job.py
tests/: test_cleanup_service.py  test_feedback_service.py  test_ingestion_service.py  test_integration.py  test_query_service.py
tests/fakes/: __init__.py  fake_memory_port.py
